# xuanjia

source/: nfs.txt
source/minigui/freetype-2.3.9-fm20100818/: build.sh
source/minigui/libmgi-2.0.4/: Makefile  build.sh  config.status  libtool  mgiconfig.h  stamp-h1
source/minigui/libmgplus-1.2.4/: ChangeLog  Makefile  Makefile.in  README  build.sh  config.status  configure  configure.in  libtool  mgplusconfig.h.in
source/minigui/libmgplus-1.2.4/src/api/: Makefile  Makefile.am  Makefile.in  brush.h  brush.lo  graphics.cpp  graphics.lo  lf_fashion.cpp  lf_fashion.lo  libapi.la  opt_abgr32.lo  opt_argb32.lo  opt_basic.cpp  opt_bgr24.lo  opt_bgra32.lo  opt_rgb24.lo  opt_rgb555.lo  opt_rgb565.lo  opt_rgba32.lo  path.cpp  path.lo  pen.lo
source/minigui/libmgplus-1.2.4/src/api/.deps/: brush.Plo  graphics.Plo  lf_fashion.Plo  opt_abgr32.Plo  opt_argb32.Plo  opt_bgr24.Plo  opt_bgra32.Plo  opt_rgb24.Plo  opt_rgb555.Plo  opt_rgb565.Plo  opt_rgba32.Plo  path.Plo  pen.Plo
source/minigui/libminigui-gpl-3.0.12/: Makefile  build.sh  confdefs.h  config.status  libtool
source/minigui/libpng-1.2.37/: Makefile  build.sh  config.status  libpng-config  libpng.la  libpng.pc  libpng12.la  libpng12_la-png.lo  libpng12_la-pngerror.lo  libpng12_la-pngget.lo  libpng12_la-pngmem.lo  libpng12_la-pngpread.lo  libpng12_la-pngread.lo  libpng12_la-pngrio.lo  libpng12_la-pngrtran.lo  libpng12_la-pngrutil.lo  libpng12_la-pngset.lo  libpng_la-png.lo  (+20 more)
source/rootfs/: MiniGUI.cfg  hwtest  same  skb_demo  sktest  switchtest  ts_calibrate  ts_harvest.out  tsenv.sh
source/test/: fbtest  fbtest.c
(+1133 files in other folders)
